fixed mobile grid item width overflowing

--- a/src/css/snippets.css
+++ b/src/css/snippets.css
@@ -46,12 +46,15 @@
     grid-column-end: 3;
     display: grid;
     margin-bottom: 5px;
+    min-width: 0;
   }
   
   .g-title {
-      font-size: 1.3rem;
-      font-weight: bold;
-      padding-bottom: 1rem;
+    font-size: 1.3rem;
+    font-weight: bold;
+    padding-bottom: 1rem;
+    word-break: break-all;
+    margin-right: 25px;
   }
   
   .g-copy {
